Closed Bug 361934 Opened 19 years ago Closed 19 years ago

[FIX]XMLHttpRequest send should match encoding to XML decl

Categories

(Core :: DOM: Core & HTML, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9alpha1

People

(Reporter: bzbarsky, Assigned: bzbarsky)

References

()

Details

(Keywords: dev-doc-complete)

Attachments

(1 file)

See thread at http://lists.w3.org/Archives/Public/public-webapi/2006Nov/0040.html and testcase in the URL field.
Depends on: 361933
Would be good to test this, and probably bug 361933, but I'm not sure how...
Flags: in-testsuite?
Keywords: dev-doc-needed
Attached patch FixSplinter Review
Attachment #246650 - Flags: superreview?(cbiesinger)
Attachment #246650 - Flags: review?(bugmail)
Comment on attachment 246650 [details] [diff] [review] Fix I assume this will do the right thing with characters outside the document's encoding? (i.e., turn them into ሴ or something)
Attachment #246650 - Flags: superreview?(cbiesinger) → superreview+
"good question". If not, that's a serializer bug that should be fixed...
So I did verify that the serializer uses entity escapes as needed. Fixed on trunk.
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Component: DOM: Mozilla Extensions → DOM
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: