Make sure the XML decl in the data we post when a document is passed to send() matches the encoding we use.  Bug 361934, r=sicking, sr=biesi